--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,12 @@
       href="https://icons.iconarchive.com/icons/papirus-team/papirus-apps/256/bitcoin-icon.png"
     />
 
-
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta property="og:image" content="%PUBLIC_URL%/bitcoinortwitter.png" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Calculate the opportunity cost of buying bitcoin versus the top 50 tech IPOs of the last decade."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
