--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,12 @@
       name="description"
       content="Calculate the opportunity cost of buying bitcoin versus the top 50 tech IPOs of the last decade."
     />
+    <meta property="twitter:title" content="Bitcoin or IPO" />
+    <meta
+      property="twitter:image"
+      content="%PUBLIC_URL%/bitcoinortwitter.png"
+    />
+    <meta name="twitter:card" content="summary_large_image" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
