Change twitter meta image

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     />
     <meta
       property="twitter:image"
-      content="%PUBLIC_URL%/bitcoinortwitter.png"
+      content="https://icons.iconarchive.com/icons/papirus-team/papirus-apps/256/bitcoin-icon.png"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
