changed meta image tag

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
       name="description"
       content="Calculate the opportunity cost of buying bitcoin versus the top 50 tech IPOs of the last decade."
     />
-    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:card" content="summary_large_image" />
     <meta property="twitter:title" content="Bitcoin or IPO" />
     <meta
       name="twitter:description"
