--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     />
     <meta
       property="twitter:image"
-      content="https://icons.iconarchive.com/icons/papirus-team/papirus-apps/256/bitcoin-icon.png"
+      content="https://drive.google.com/file/d/1GXkBNuIDpPk4Ml3jhwPPiK2Cg9BwvkFO/view?usp=sharing"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
