Changed meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -9,20 +9,20 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta property="og:image" content="%PUBLIC_URL%/bitcoinortwitter.png" />
+    <!-- <meta property="og:image" content="%PUBLIC_URL%/bitcoinortwitter.png" /> -->
     <meta
       name="description"
       content="Calculate the opportunity cost of buying bitcoin versus the top 50 tech IPOs of the last decade."
     />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta property="twitter:title" content="Bitcoin or IPO" />
+    <meta name="twitter:title" content="Bitcoin or IPO" />
     <meta
       name="twitter:description"
       content="Calculate the opportunity cost of buying bitcoin versus the top 50 tech IPOs of the last decade."
     />
     <meta
-      property="twitter:image"
-      content="https://drive.google.com/file/d/1GXkBNuIDpPk4Ml3jhwPPiK2Cg9BwvkFO/view?usp=sharing"
+      name="twitter:image"
+      content="https://drive.google.com/file/d/1LiliMWkVCP7KnTC4ReiLUad-hm95Q9r1/view?usp=sharing"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
