Changed image aspect ratio

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://drive.google.com/file/d/1LiliMWkVCP7KnTC4ReiLUad-hm95Q9r1/view?usp=sharing"
+      content="https://drive.google.com/uc?id=1LiliMWkVCP7KnTC4ReiLUad-hm95Q9r1"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
