Changed meta tag

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,10 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <!-- <meta property="og:image" content="%PUBLIC_URL%/bitcoinortwitter.png" /> -->
+    <meta
+      property="og:image"
+      content="https://drive.google.com/uc?id=1LiliMWkVCP7KnTC4ReiLUad-hm95Q9r1"
+    />
     <meta
       name="description"
       content="Calculate the opportunity cost of buying bitcoin versus the top 50 tech IPOs of the last decade."
