Added Google Analytics Tag

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-Z5SFMFHX5B"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-Z5SFMFHX5B");
+    </script>
+
     <link
       rel="icon"
       href="https://icons.iconarchive.com/icons/papirus-team/papirus-apps/256/bitcoin-icon.png"
